# tone-on-a-budget

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: README.md
docs/: index.html
docs/audio/: README.md
notebooks/: 01_omnivoice_yoruba_probe.ipynb  03_omnivoice_yoruba_finetune.ipynb  04_omnivoice_yoruba_verify.ipynb  05_omnivoice_yoruba_sweep.ipynb  06_cer_tone_blind.ipynb  07_omnivoice_yoruba_errorbars.ipynb  08_swahili_prep.ipynb  09_swahili_sweep.ipynb  11_quickstart_tone_metric.ipynb  12_audio_ab_demo.ipynb  13_multiseed_reruns.ipynb  14_native_anchor_ci.ipynb  15_pilot_listening_form.ipynb  16_psola_tone_form.ipynb  17_tone_flip_oracle.ipynb  README.md
notebooks/runs/: full_28h_run.json  full_28h_run.md
pilot/: .gitignore  1_PING_message.md  2_REVIEWER_instructions.md  3_REVIEWER_instructions_psola.md  PSOLA_RECIPE.md  build_pilot_form.py  build_psola_form.py  score_pilot.py  score_psola.py  test_psola_ab.py
tone_metric/: __init__.py  grpo_reward.py  minimal_pairs_draft.json  test_l2_wiring.py  test_tone_f0_abs.py  test_tone_gate.py  test_tone_layer0.py  test_tone_oracle.py  test_tone_probe.py  test_tone_v2.py  tone_eval.py  tone_eval_v2.py  tone_f0_abs.py  tone_gate.py  tone_layer0.py  tone_oracle.py  tone_probe.py
